fix(bond-dialog): dialog overflow style

--- a/src/components/Dialog/dialog.scss
+++ b/src/components/Dialog/dialog.scss
@@ -2,7 +2,7 @@
     padding: 20px 20px 40px;
     min-width: 800px;
     max-height: 100vh;
-    overflow: scroll;
+    overflow: auto;
 
     .dialog-header {
         display: flex;
